fix: graph design update in case invoice is too high

--- a/src/app/components/graph/graph.component.scss
+++ b/src/app/components/graph/graph.component.scss
@@ -9,7 +9,7 @@
     padding: .25rem .5rem;
     float: left;
     overflow: hidden;
-    max-width: 60%;
+    max-width: 50%;
 
     &-organization {
       font-weight: 500;
